--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pizza Legends</title>
+    <title>San Clemente 16</title>
     <link href="/styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
