--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>San Clemente 16</title>
-    <link href="/styles.css" type="text/css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="game-container">
-      <canvas class="game-canvas" width="352" height="198"></canvas>
-    </div>
+<body>
 
-    <!-- Scripts -->
-    <script src="/Overworld.js"></script>
-    <script src="/init.js"></script>
+<h2>What Can JavaScript Do?</h2>
 
-  </body>
+<p id="demo">JavaScript can change HTML content.</p>
+
+<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
+
+</body>
 </html>
