--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <head>
+    <title>San Clemente 16</title>
+    <link href="/styles.css" type="text/css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="game-container">
+      <canvas class="game-canvas" width="352" height="198"></canvas>
+    </div>
 
-<h2>What Can JavaScript Do?</h2>
+    <!-- Scripts -->
+    <script src="/Overworld.js"></script>
+    <script src="/init.js"></script>
 
-<p id="demo">JavaScript can change HTML content.</p>
-
-<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
-
-</body>
+  </body>
 </html>
